tests/rosetta/out/Fortran/call-a-function-1.error
gfortran: exit status 1
/tmp/call-a-function-1.f90:7:14:

    7 |     res = (/0,0.0/)
      |              1
Error: Element in INTEGER(4) array constructor at (1) is REAL(4)
